--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,14 +51,14 @@ jobs:
         uses: actions/checkout@v2
       - name: Cache Dependencies (macOS, Homebrew)
         if: matrix.os == 'macos-latest'
-        id: cache
+        id: cache-macos
         uses: actions/cache@v2
         with:
           path: /usr/local
           key: msys2-packages-${{ matrix.os }}
       - name: Cache Dependencies (Linux, Apt)
         if: matrix.os == 'ubuntu-latest'
-        id: cache
+        id: cache-ubuntu
         uses: actions/cache@v2
         with:
           path: |
@@ -67,7 +67,8 @@ jobs:
             /usr/share
           key: msys2-packages-${{ matrix.os }}
       - name: Install Dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
+        if: (matrix.os == 'macos-latest'  && steps.cache-macos.outputs.cache-hit != 'true') || \
+            (matrix.os == 'ubuntu-latest' && steps.cache-ubuntu.outputs.cache-hit != 'true')
         run: |
           .ci/build_gdl.sh prep
       - name: Build GDL
@@ -108,20 +109,20 @@ jobs:
         uses: actions/checkout@v2
       - name: Cache Dependencies (Windows, MSYS, 64bit)
         if: matrix.arch == x86_64
-        id: cache
+        id: cache-64
         uses: actions/cache@v2
         with:
           path: |
             C:\msys64\mingw64
-          key: msys2-packages-${{ matrix.arch }}-${{ matrix.deps }}
+          key: msys2-packages-${{ matrix.arch }}
       - name: Cache Dependencies (Windows, MSYS, 32bit)
         if: matrix.arch == i686
-        id: cache
+        id: cache-32
         uses: actions/cache@v2
         with:
           path: |
             C:\msys64\mingw32
-          key: msys2-packages-${{ matrix.arch }}-${{ matrix.deps }}
+          key: msys2-packages-${{ matrix.arch }}
       - name: Check Version of Latest GDL Workbench
         if: matrix.arch == 'x86_64'
         id: gdl_workbench
@@ -134,6 +135,8 @@ jobs:
           Invoke-WebRequest -Uri https://download.microsoft.com/download/a/5/2/a5207ca5-1203-491a-8fb8-906fd68ae623/msmpisetup.exe -OutFile MSMpiSetup.exe
           .\MSMpiSetup.exe -unattend
       - name: Install Dependencies
+        if: (matrix.arch == 'x86_64' && steps.cache-64.outputs.cache-hit != 'true') || \
+            (matrix.arch == 'i686'   && steps.cache-32.outputs.cache-hit != 'true')
         if: steps.cache.outputs.cache-hit != 'true'
         shell: msys2 {0}
         run: |
