--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,17 +55,18 @@ jobs:
         uses: actions/cache@v2
         with:
           path: /usr/local
-          key: msys2-packages-${{ matrix.os }}
+          key: cache-${{ matrix.os }}
       - name: Cache Dependencies (Linux, Apt)
         if: matrix.os == 'ubuntu-latest'
         id: cache-ubuntu
         uses: actions/cache@v2
         with:
           path: |
+            /usr/bin
             /usr/lib
             /usr/include
             /usr/share
-          key: msys2-packages-${{ matrix.os }}
+          key: cache-${{ matrix.os }}
       - name: Install Dependencies
         if: (matrix.os == 'macos-latest'  && steps.cache-macos.outputs.cache-hit != 'true') ||
             (matrix.os == 'ubuntu-latest' && steps.cache-ubuntu.outputs.cache-hit != 'true')
@@ -114,7 +115,7 @@ jobs:
         with:
           path: |
             C:\msys64\mingw64
-          key: msys2-packages-${{ matrix.arch }}
+          key: cache-msys2-${{ matrix.arch }}
       - name: Cache Dependencies (Windows, MSYS, 32bit)
         if: matrix.arch == 'i686'
         id: cache-32
@@ -122,7 +123,7 @@ jobs:
         with:
           path: |
             C:\msys64\mingw32
-          key: msys2-packages-${{ matrix.arch }}
+          key: cache-msys2-${{ matrix.arch }}
       - name: Check Version of Latest GDL Workbench
         if: matrix.arch == 'x86_64'
         id: gdl_workbench
