--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,9 +58,12 @@ jobs:
       - name: Install Dependencies (macOS, Homebrew)
         if: matrix.os == 'macos-latest' && steps.cache.outputs.cache-hit != 'true'
         run: |
+          echo "Taking package snapshot..."
           find /usr/local -path /usr/local/miniconda -prune -false -or -type l -or -type f | sort > ~/snapshot1.txt
           .ci/build_gdl.sh prep
+          echo "Taking package snapshot after installing dependencies..."
           find /usr/local -path /usr/local/miniconda -prune -false -or -type l -or -type f | sort > ~/snapshot2.txt
+          echo "Setting up cache..."
           mkdir -p ${{ runner.temp }}/cache
           ditto $(comm -13 ~/snapshot1.txt ~/snapshot2.txt) ${{ runner.temp }}/cache
       - name: Restore cache (macOS, Homebrew)
@@ -70,9 +73,12 @@ jobs:
       - name: Install Dependencies (Linux, Apt)
         if: matrix.os == 'ubuntu-latest' && steps.cache.outputs.cache-hit != 'true'
         run: |
+          echo "Taking package snapshot..."
           find /usr -type l -or -type f | sort > ~/snapshot1.txt
           .ci/build_gdl.sh prep
+          echo "Taking package snapshot after installing dependencies..."
           find /usr -type l -or -type f | sort > ~/snapshot2.txt
+          echo "Setting up cache..."
           mkdir -p ${{ runner.temp }}/cache
           cp --parents $(comm -13 ~/snapshot1.txt ~/snapshot2.txt) ${{ runner.temp }}/cache
       - name: Restore cache (Linux)
