--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,9 @@ jobs:
           find /usr/local -path /usr/local/miniconda -prune -false -or -type l -or -type f | sort > ~/snapshot2.txt
           echo "Setting up cache..."
           mkdir -p ${{ runner.temp }}/cache
-          ditto $(comm -13 ~/snapshot1.txt ~/snapshot2.txt) ${{ runner.temp }}/cache
+          for fn in $(comm -13 ~/snapshot1.txt ~/snapshot2.txt); do
+            ditto ${fn} ${{ runner.temp }}/cache
+          done
       - name: Restore cache (macOS, Homebrew)
         if: matrix.os == 'macos-latest' && steps.cache.outputs.cache-hit == 'true'
         run: |
@@ -80,7 +82,9 @@ jobs:
           find /usr -type l -or -type f | sort > ~/snapshot2.txt
           echo "Setting up cache..."
           mkdir -p ${{ runner.temp }}/cache
-          cp --parents $(comm -13 ~/snapshot1.txt ~/snapshot2.txt) ${{ runner.temp }}/cache
+          for fn in $(comm -13 ~/snapshot1.txt ~/snapshot2.txt); do
+            cp --parents ${fn} ${{ runner.temp }}/cache
+          done
       - name: Restore cache (Linux)
         if: matrix.os == 'ubuntu-latest' && steps.cache.outputs.cache-hit == 'true'
         run: |
