--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,8 +88,8 @@ jobs:
       - name: Restore cache
         if: steps.cache.outputs.cache-hit == 'true'
         run: |
-          cd ${{ runner.temp }}/cache
-          sudo rsync -av . /
+          sudo rsync -a ${{ runner.temp }}/cache /
+          ls /
       - name: Build GDL
         run: |
           .ci/build_gdl.sh build
