--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,9 +88,7 @@ jobs:
       - name: Restore cache
         if: steps.cache.outputs.cache-hit == 'true'
         run: |
-          sudo su
-          rsync -og -a ${{ runner.temp }}/cache/ /
-          ls -al /
+          sudo rsync -a --no-owner --no-group ${{ runner.temp }}/cache/ /
       - name: Build GDL
         run: |
           .ci/build_gdl.sh build
