--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,8 +88,7 @@ jobs:
       - name: Restore cache
         if: steps.cache.outputs.cache-hit == 'true'
         run: |
-          ls -alh ${{ runner.temp }}/cache
-          sudo cp -Rvf ${{ runner.temp }}/cache/* /
+          sudo cp -Rf ${{ runner.temp }}/cache/* /
       - name: Build GDL
         run: |
           .ci/build_gdl.sh build
