--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,6 +88,7 @@ jobs:
       - name: Restore cache
         if: steps.cache.outputs.cache-hit == 'true'
         run: |
+          ls -alh /
           sudo cp -Rf ${{ runner.temp }}/cache/* /
       - name: Build GDL
         run: |
