--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,8 +88,8 @@ jobs:
       - name: Restore cache
         if: steps.cache.outputs.cache-hit == 'true'
         run: |
-          cd ${{ runner.temp }}/cache && tar cf ${{ runner.temp }}/cache.tar
-          cd / && sudo tar xf ${{ runner.temp }}/cache.tar
+          cd ${{ runner.temp }}/cache && tar cf ${{ runner.temp }}/cache.tar .
+          cd / && sudo tar xvf ${{ runner.temp }}/cache.tar
       - name: Build GDL
         run: |
           .ci/build_gdl.sh build
