--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -161,9 +161,9 @@ jobs:
           echo "Setting up cache..."
           mkdir -p /cache
           for package in $(comm -13 ~/snapshot1.txt ~/snapshot2.txt); do
-            tar x /var/cache/pacman/pkg/*.tar.* -C /cache
+            tar xf /var/cache/pacman/pkg/*.tar.* -C /cache
           done
-          tar x ../MINGW-packages/mingw-w64-graphicsmagick/mingw-w64-x86_64-graphicsmagick-*.tar.* -C /cache
+          tar xf ../MINGW-packages/mingw-w64-graphicsmagick/mingw-w64-x86_64-graphicsmagick-*.tar.* -C /cache
           ADDTIONAL_FILES=( /mingw*/bin/mgwxdr-0.dll
                             /mingw*/lib/libxdr.*
                             /mingw*/include/rpc/types.h
