--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -157,11 +157,14 @@ jobs:
         run: |
           pacman -Q | tr ' ' '-' | sort > ~/snapshot1.txt
           .ci/build_gdl.sh prep
+          ls ../MINGW-packages/mingw-w64-graphicsmagick/
           mv ../MINGW-packages/mingw-w64-graphicsmagick/mingw-w64-x86_64-graphicsmagick-*.tar.* /var/cache/pacman/pkg
           pacman -Q | tr ' ' '-' | sort > ~/snapshot2.txt
           echo "Setting up cache..."
           mkdir -p /cache
+          ls /var/cache/pacman/pkg/
           for package in $(comm -13 ~/snapshot1.txt ~/snapshot2.txt); do
+            echo ${package}
             tar xf /var/cache/pacman/pkg/${package}-*.tar.* -C /cache
           done
           ADDTIONAL_FILES=( /mingw*/bin/mgwxdr-0.dll
