--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,8 @@ jobs:
         with:
           path: ${{ runner.temp }}/cache
           key: cache-gdl-deps-${{ matrix.os }}
+      - name: Setup upterm session
+        uses: lhotari/action-upterm@v1
       - name: Install Dependencies (macOS, Homebrew)
         if: matrix.os == 'macos-latest' && steps.cache.outputs.cache-hit != 'true'
         run: |
